--- a/server/views/index.html
+++ b/server/views/index.html
@@ -62,6 +62,7 @@
 <div id="page-header" class="row text-center">
     <div id="title-text"><span id="you">You</span><span id="tube">Tube</span><span id="search"> Agent</span></div>
     <div class="text-center"><small>YouTube Sorting and Filtering - Easy to Use and Advanced Search Engine to Optimize YouTube Results</small></div>
+    <div id="contact-info" class="text-right col-md-12">Contact | <a href="mailto:fallon.lance@gmail.com">Lance Fallon <span class="glyphicon glyphicon-envelope"></span></a></div>
     <br />
     <div class="google-button">
         <div class="g-signin2" data-onsuccess="onSignIn"></div>
@@ -70,8 +71,6 @@
 </div>
 <div ng-view></div>
     <toaster-container></toaster-container>
-    <hr />
-    <div class="text-right col-md-12"><a href="mailto:fallon.lance@gmail.com">Lance Fallon <span class="glyphicon glyphicon-envelope"></span></a></div>
 </body>
 </html>
 
