--- a/server/views/index.html
+++ b/server/views/index.html
@@ -7,7 +7,7 @@
     <link rel='shortcut icon' type='image/x-icon' href='static/favicon.ico' />
 
     <meta name="author" content="Lance Fallon">
-    <meta name="keywords" content="Youtube Sorting And Filtering - Search Optimization Made Easy Youtube Advanced Search Engine" />
+    <meta name="keywords" content="Youtube Sorting And Filtering - Perform advanced Youtube searches by combining sorts and filters to optimize results" />
     <meta name="description" content="Sort, Filter, and Optimize your youtube searches to return only the best results." />
     <!--<meta name="google-signin-client_id" content="613015363976-0aodg2ib3dmv8m2g7gmknnglg29cmir9.apps.googleusercontent.com">-->
     <meta name="google-signin-client_id" content="613015363976-vt1eeel6upnq26k2haupepbdtpd2bjgj.apps.googleusercontent.com">
