--- a/server/views/index.html
+++ b/server/views/index.html
@@ -9,8 +9,7 @@
     <meta name="author" content="Lance Fallon">
     <meta name="keywords" content="YouTubeAgent - YouTube Sorting And Filtering - Perform advanced YouTube searches by combining sorts and filters to optimize results" />
     <meta name="description" content="YouTubeAgent - Sort, Filter, and Optimize your YouTube searches to return only the best results." />
-    <!--<meta name="google-signin-client_id" content="613015363976-0aodg2ib3dmv8m2g7gmknnglg29cmir9.apps.googleusercontent.com">-->
-    <meta name="google-signin-client_id" content="613015363976-vt1eeel6upnq26k2haupepbdtpd2bjgj.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="{{clientId}}">
 
     <!-- bower -->
     <script type="text/javascript" src='bower/jquery/dist/jquery.js'></script>
