--- a/server/views/partial/home.html
+++ b/server/views/partial/home.html
@@ -57,10 +57,10 @@
                     <div id="minRatingHeader"><span class="glyphicon glyphicon-star"></span>Min Rating</div>
                     <input ng-model="minRating" type="number" class="form-control" ng-blur="filter()" placeholder="Minimum rating (0 to 100)" />
                 </div>
-                <!--<div id="dateFilter">-->
-                    <!--<div id="dateFilterHeader"><span class="glyphicon glyphicon-calendar"></span>Min Date</div>-->
-                    <!--<input type="date" ng-blur="filter()" class="form-control" ng-model="minDate" placeholder="Select earliest date" />-->
-                <!--</div>-->
+                <div id="dateFilter">
+                    <div id="dateFilterHeader"><span class="glyphicon glyphicon-calendar"></span>Min Date</div>
+                    <input type="date" ng-blur="filter()" class="form-control" ng-model="minDate" placeholder="Select earliest date" />
+                </div>
 
                 <div id="durationContainer">
                     <div id="durationFilterHeader"><span class="glyphicon glyphicon-time"></span>Duration</div>
