popular by country and category... start

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -36,6 +36,7 @@
     <script type="text/javascript" src='static/app/services/timeService.js'></script>
     <script type="text/javascript" src='static/app/services/authService.js'></script>
     <script type="text/javascript" src='static/app/services/playlistService.js'></script>
+    <script type="text/javascript" src='static/app/services/countriesService.js'></script>
 
     <!-- css -->
     <link href="css/style.css" rel="stylesheet" />
