--- a/server/views/partial/home.html
+++ b/server/views/partial/home.html
@@ -1,3 +1,4 @@
+<!--<button class="btn btn-default" ng-click="searchPopular()">Search popular</button>-->
 <div id="input-container" class="row">
 
     <div id="textbox-container" class="form-group col-md-8 col-md-offset-2">
