--- a/server/views/partial/home.html
+++ b/server/views/partial/home.html
@@ -9,16 +9,16 @@
                 <div id="stopButton" ng-if="fetching" class="notta-button input-group-addon" ng-click="interrupt()"><span class="glyphicon glyphicon-stop"></span>Stop</div>
             </div>
         </form>
-        <div id="yearly-search-btn-wrapper" class="btn-group">
-            <label id="yearly-search-yes" class="btn btn-success" ng-model="yearlySearch" uib-btn-radio="true" uncheckable>On</label>
-            <label id="yearly-search-no" class="btn btn-success" ng-model="yearlySearch" uib-btn-radio="false" uncheckable>Off</label>
-            <div id="yearly-search-message">
-                <div id="yearly-search-label">
-                    Yearly Search
-                </div>
-                <span>Turning this feature on will decrease speed, but can lead to more results</span>
-            </div>
-        </div>
+        <!--<div id="yearly-search-btn-wrapper" class="btn-group">-->
+            <!--<label id="yearly-search-yes" class="btn btn-success" ng-model="yearlySearch" uib-btn-radio="true" uncheckable>On</label>-->
+            <!--<label id="yearly-search-no" class="btn btn-success" ng-model="yearlySearch" uib-btn-radio="false" uncheckable>Off</label>-->
+            <!--<div id="yearly-search-message">-->
+                <!--<div id="yearly-search-label">-->
+                    <!--Yearly Search-->
+                <!--</div>-->
+                <!--<span>Turning this feature on will decrease speed, but can lead to more results</span>-->
+            <!--</div>-->
+        <!--</div>-->
     </div>
 </div>
 
