--- a/public/app/css/style.css
+++ b/public/app/css/style.css
@@ -1,3 +1,4 @@
+
 body{
     font-family: sans-serif;
     background: #eeeee;
@@ -100,10 +101,6 @@ body{
     color: white;
 }
 
-#sort-options-container label{
-    margin-left: 15px;
-}
-
 .table, .panel, .thumbnail{
     border: none !important;
 }
@@ -162,29 +159,21 @@ body{
     box-shadow: 5px 10px 18px black inset;
 }
 
-#durationContainer, #dateFilter, #minRatingContainer, #minViewsContainer{
-    margin-top: 12px;
-}
-
-#minViewsContainer #minViewsHeader, #durationContainer #durationFilterHeader, #minRatingContainer #minRatingHeader, #dateFilter #dateFilterHeader, #maxDislikesContainer #maxDislikesHeader{
-    display: inline;
-}
-
-#minViewsContainer input, #durationContainer input, #dateFilter input, #maxDislikesContainer input, #minRatingContainer input{
-    display: inline-block;
-}
-
-#minViewsContainer input, #dateFilter input, #maxDislikesContainer input, #minRatingContainer input{
-    width: 200px;
-}
-
 #durationContainer input{
     width: 100px;
 }
 
 .sort-filter-header{
-    background:#01579B;
+    background:linear-gradient(to right, rgba(1,87,155,0.4),rgb(1,87,155),rgb(1,87,155),rgb(1,87,155),rgb(1,87,155),rgb(1,87,155),rgba(1,87,155,0.4));;
     padding: 8px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+.sort-filter-header .glyphicon{
+    margin-right: 5px;
 }
 
 .sort-filter-header-content{
@@ -209,11 +198,6 @@ body{
 
 .filter-content .glyphicon{
     margin-right: 4px;
-}
-
-#maxDislikesHeader, #dateFilterHeader, #durationFilterHeader, #minRatingHeader, #minViewsHeader{
-    font-weight: bolder;
-    margin-right: 10px;
 }
 
 #sort-and-filter{
@@ -352,4 +336,45 @@ body{
 
 #search-popular-wrapper #search-popular-button-wrapper .btn-default{
     background: #4CAF50 ;
+}
+
+#sort-content{
+    text-align: center;
+}
+
+.filter-content-table, #sort-content{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.filter-content-table tr.row-padding > td{
+    padding-bottom: 0.2em !important;
+    padding-top: 0.2em !important;
+}
+
+#duration-range-wrapper input{
+    width: 49%;
+    display: inline;
+}
+
+.filter-content-table table{
+    width: 100%;
+}
+
+.filter-content-table td.filter-label{
+    width: 40%;
+}
+
+.filter-content-table td.filter-input input{
+    width: 100%;
+}
+
+#sort-content-wrapper .btn.active{
+    color:rgb(1,87,155);
+    font-weight: bold;
+}
+
+.filter-content-table .filter-label{
+    font-weight: bolder;
+    font-size: 18px;
 }
