--- a/server/views/partial/home.html
+++ b/server/views/partial/home.html
@@ -38,6 +38,12 @@
                         <option value="">{{searchMode === TEXT_SEARCH ? 'Any country' : 'Select a country'}}</option>
                     </select>
                 </div>
+                <div id="extended-search-wrapper">
+                    <button type="button" class="btn btn-default" ng-model="extendedSearch" uib-btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false">
+                        <span class="glyphicon glyphicon-forward"></span>Extended Search
+                    </button>
+                    <div id="extended-search-message" class="text-danger"><span class="glyphicon glyphicon-warning-sign"></span>This type of search will take longer to complete</div>
+                </div>
             </form>
         </div>
 
