make warning look less scary

--- a/server/views/partial/home.html
+++ b/server/views/partial/home.html
@@ -42,7 +42,7 @@
                     <button type="button" class="btn btn-default" ng-model="extendedSearch" uib-btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false">
                         <span class="glyphicon glyphicon-forward"></span>Extended Search
                     </button>
-                    <div id="extended-search-message" class="text-danger"><span class="glyphicon glyphicon-warning-sign"></span>This type of search will take longer to complete</div>
+                    <div id="extended-search-message" class="text-muted"><span class="glyphicon glyphicon-warning-sign"></span>This type of search will take longer to complete</div>
                 </div>
             </form>
         </div>
