--- a/server/views/partial/home.html
+++ b/server/views/partial/home.html
@@ -38,6 +38,22 @@
                         <option value="">{{searchMode === TEXT_SEARCH ? 'Any country' : 'Select a country'}}</option>
                     </select>
                 </div>
+                <div class="form-group">
+                    <select ng-repeat="option in videoDurationOptions" class="form-control">
+                        <option ng-model="videoDuration" value="{{option}}">{{option}}</option>
+                    </select>
+                </div>
+                <div id="categories-dropdown-wrapper-text-search" class="col-md-6">
+                    <select id="categories-list-text-search" name="categories" class="form-control"
+                            ng-model="selectedCategory"
+                            ng-options="category as category.snippet.title for category in videoCategories">
+                    </select>
+                </div>
+                <div id="safe-search-wrapper" class="btn-group col-md-12">
+                    <div id="safe-search-mode-labels-wrapper">
+                        <label ng-repeat="option in safeSearchOptions" class="safe-search-mode-button btn btn-default" ng-model="searchMode" uib-btn-radio="{{option}}" uncheckable>{{option}}</label>
+                    </div>
+                </div>
                 <div id="extended-search-wrapper">
                     <button type="button" class="btn btn-default" ng-model="extendedSearch" uib-btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false">
                         <span class="glyphicon glyphicon-forward"></span>Extended Search
